# ToDo-List

./: .gitignore  CMakeLists.txt  README.md
include/: filehandler.h  task.h  taskmanager.h
src/: filehandler.cpp  main.cpp  task.cpp  taskmanager.cpp
